# mSDK-template

./: .gitignore  .gitmodules  clang-cl.ini  meson.build  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  requirements.txt
src/: Common.h  Common.hpp  Debuger.cpp  Edittime.cpp  Ext.def  Ext.rc  General.cpp  Main.cpp  Main.h  Main.hpp  Properties.cpp  Runtime.cpp
src/ACE/: actions.cpp  conditions.cpp  expressions.cpp
